[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/well_done_cpu_gpu.png" type="Texture" id=1]
[ext_resource path="res://Assets/gpu_happy.png" type="Texture" id=2]
[ext_resource path="res://Assets/stars_1.png" type="Texture" id=3]
[ext_resource path="res://Scenes/LevelEndScreens/LevelFinishedGpu.gd" type="Script" id=4]
[ext_resource path="res://Assets/button_done_pressed.png" type="Texture" id=5]
[ext_resource path="res://Assets/button_done.png" type="Texture" id=6]
[ext_resource path="res://Assets/button_play_again.png" type="Texture" id=7]
[ext_resource path="res://Assets/button_play_again_pressed.png" type="Texture" id=8]

[node name="LevelFinishedGpu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 3840.0
margin_bottom = 2160.0

[node name="FinishedText" type="Sprite" parent="."]
position = Vector2( 2500, 1080 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 1 )

[node name="Stars" type="Sprite" parent="."]
position = Vector2( 1100, 1080 )
texture = ExtResource( 3 )

[node name="Component" type="Sprite" parent="."]
position = Vector2( 544, 1098 )
rotation = -1.16937
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="DoneButton1" type="TextureButton" parent="."]
margin_left = 2006.0
margin_top = 1850.0
margin_right = 2318.9
margin_bottom = 1963.4
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )
expand = true

[node name="PlayAgainButton1" type="TextureButton" parent="."]
margin_left = 2389.0
margin_top = 1850.0
margin_right = 3009.9
margin_bottom = 1961.3
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
expand = true

[node name="DoneButton2" type="TextureButton" parent="."]
margin_left = 2697.0
margin_top = 200.0
margin_right = 3009.9
margin_bottom = 313.4
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )
expand = true
flip_h = true
flip_v = true

[node name="PlayAgainButton2" type="TextureButton" parent="."]
margin_left = 2008.0
margin_top = 200.0
margin_right = 2628.9
margin_bottom = 311.3
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
expand = true
flip_h = true
flip_v = true

[connection signal="pressed" from="DoneButton1" to="." method="_on_DoneButton_pressed"]
[connection signal="pressed" from="PlayAgainButton1" to="." method="_on_PlayAgainButton_pressed"]
[connection signal="pressed" from="DoneButton2" to="." method="_on_DoneButton_pressed"]
[connection signal="pressed" from="PlayAgainButton2" to="." method="_on_PlayAgainButton_pressed"]
